apps/home-assistant/middleware-authentik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-forward-auth
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  forwardAuth:
    address: http://ak-outpost-authentik-embedded-outpost.authentik:9000/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - "X-authentik-username"
      - "X-authentik-groups"
      - "X-authentik-email"
      - "X-authentik-name"
      - "X-authentik-uid"
      - "X-authentik-jwt"
      - "X-authentik-meta-jwks"
      - "X-authentik-meta-outpost"
      - "X-authentik-meta-provider"
      - "X-authentik-meta-app"
      - "X-authentik-meta-version"
